--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* Custom styles for Leaflet map */
-.leaflet-container {
-  height: 100%;
-  width: 100%;
-}
+/* TODO: Copy content from artifact for index.css */
